<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".MainActivity"
              android:paddingLeft="8dp"
              android:paddingRight="8dp"
              style="?android:attr/buttonBarStyle"
              >

  <!-- hidden or not as a status indicator -->
  <TextView android:id="@+id/send_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_receive"
            android:layout_gravity="center_horizontal"
            />

  <ScrollView android:id="@+id/scroll"
              android:orientation="vertical"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent"
              android:layout_weight="1"
              android:background="#F0F0F0"
              >
    <!-- contents inserted at runtime -->
    <TableLayout android:id="@+id/msg_list"
                 android:layout_width="fill_parent" 
                 android:layout_height="wrap_content"
                 />
  </ScrollView>

  <Button android:id="@+id/clearall"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/clear_all"
          android:layout_gravity="center_horizontal"
          style="?android:attr/buttonBarButtonStyle"
          />

  <EditText android:id="@+id/edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:scrollHorizontally="false"
            android:hint="@string/edit_hint"
            android:background="#F0F0F0"
            />

  <LinearLayout android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                >
    <Button android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:layout_gravity="center_vertical"
            style="?android:attr/buttonBarButtonStyle"
            />

    <Button android:id="@+id/make"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make"
            android:layout_gravity="center_vertical"
            style="?android:attr/buttonBarButtonStyle"
            />

    <Button android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_gravity="center_vertical"
            style="?android:attr/buttonBarButtonStyle"
            />
  </LinearLayout>
</LinearLayout>
